@@ -1,3 +1,7 @@
+2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Fix display of connector property error, resolves #122
+
 2020-05-01 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Do not log the execution time limit change (logger not available), resolves #119
